[client] Stop jumping on column menu
## Motivation

Icons shuffle around when you mouseover them. 

## Change description

Keep the icons aligned with the label, always reserve space on the right for the menu

## Checklists

- [x] Security impact of change has been considered
- Data Incident Risk: 
    - [x] None
    - [ ] Low
    - [ ] High

--- a/client/src/app/components/field-value-wrappers/header/FieldHeaderComponent.module.css
+++ b/client/src/app/components/field-value-wrappers/header/FieldHeaderComponent.module.css
@@ -1,11 +1,12 @@
-.headerWrapper {
+.fieldHeader {
   position: relative;
   display: flex;
   height: 100%;
   width: 100%;
   align-items: center;
   padding-left: 8px;
-  padding-right: 8px;
+  padding-right: 0px;
   gap: 8px;
   flex: 1;
+  cursor: pointer;
 }
